# kpublish

./: .gitignore  Cargo.toml  Dockerfile  config.yaml  readme.md
public/: RLHF.md  Vroom-Vroom.md  code.md  how-to-make-a-minecraft-plugin.md  render.md  test.md  test2.md  test3.md  Врум врум едем.md  Залупа конская.md
src/: fileutil.rs  main.rs  render.rs
templates/: admin.html  index.html  indexnew.html  post.html  postanki.html  postnew.html
