[package]
name = "kpublish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "sync", "fs", "net", "time", "macros"] }
actix-web = "4.3.1"
pulldown-cmark = "0.9.3"
actix-files = "0.6.2"
