[package]
name = "kpublish"
version = "0.10.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["rt", "rt-multi-thread", "sync", "fs", "net", "time", "macros"] }
actix-web = { version = "4", default-features = false, features = ["cookies", "macros", "compress-gzip", "compress-brotli"] }
pulldown-cmark = "0.9.3"
actix-files = "0.6.2"
env_logger = "0.10.0"
handlebars = { version = "4.5", features = ["dir_source"] }
serde_json = "1.0.114"
fronma = "0.2.0"
serde = { version = "1.0.197", features = ["derive"]}
serde_yaml = "0.9.32"
regex = "1.11.1"
chrono = "0.4.38"
